# cpp-performance-lab

./: .gitignore  CMakeLists.txt  README.md  results-summary.md
benchmark/: CMakeLists.txt  bm_aos_vs_soa.cpp  bm_cache_associativity.cpp  bm_cache_levels.cpp  bm_false_sharing.cpp  bm_memory_pool.cpp  bm_mutex_vs_atomic.cpp  bm_queue.cpp  bm_stride_access.cpp
benchmark/cache/: bm_cache_associativity.cpp  bm_cache_levels.cpp  bm_pointer_chasing.cpp
benchmark/concurrency/: bm_cv_vs_spin.cpp  bm_lock_variants.cpp  bm_memory_order.cpp  bm_mpsc_mpmc_queue.cpp  bm_queue.cpp  bm_queue_message_size.cpp  bm_thread_affinity.cpp
benchmark/containers/: bm_container_lookup.cpp  bm_vector_deque_list.cpp
benchmark/cpu/: bm_aliasing_effects.cpp  bm_branch_prediction.cpp  bm_ilp.cpp  bm_inlining_effects.cpp
benchmark/ipc/: bm_pipe_vs_shm.cpp  bm_socketpair_vs_pipe.cpp
benchmark/language/: bm_dynamic_cast_vs_tag.cpp  bm_exception_vs_error_code.cpp  bm_std_function_vs_lambda.cpp  bm_variant_vs_virtual.cpp  bm_virtual_vs_template_dispatch.cpp
benchmark/memory/: bm_allocator_mixed_size.cpp  bm_allocator_variants.cpp  bm_cross_thread_free.cpp  bm_tlb_pressure.cpp
benchmark/network/: bm_socket_loopback.cpp
benchmark/syscalls/: bm_clock_overhead.cpp  bm_mmap_cow.cpp  bm_mmap_vs_read.cpp  bm_page_fault_mlock.cpp
scripts/: generate_plots.py  run_all.sh
